Fix jumping scroll bar issue

--- a/docs/_sass/jekyll-theme-minimal.scss
+++ b/docs/_sass/jekyll-theme-minimal.scss
@@ -7,6 +7,7 @@ body {
   font: 16px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#333;
   font-weight:400;
+  margin-left: calc(100vw - 100%);
 }
 
 h1, h2, h3, h4, h5, h6 {
